--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
                                             </div>
                                             <div class="container-login100-form-btn">
                                                 <button type="submit" class="login100-form-btn btn-primary">
-                                                        KIrish
+                                                        Kirish
                                                 </button>
                                             </div>
 
